@@ -51,6 +51,7 @@ extern MagickExport void
   DeleteImageFromList(Image **),
   DeleteImages(Image **,const char *,ExceptionInfo *),
   InsertImageInList(Image **,Image *),
+  PageIndexImageList(Image *),
   PrependImageToList(Image **,Image *),
   ReplaceImageInList(Image **,Image *),
   ReverseImageList(Image **),
